Full update to 1.21.1
...barring minor issues... (ugh)